--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-wwww
+26.09.2018
+<p><b>Privacy Policy Youtube Subscription(Collection) Manager		</b>
+</p>
+<p>We at Youtube Subscription(Collection) Manager are committed to protecting your privacy. This privacy policy applies to our browser extension.
+</p>
+<p>The information we gather or process is used solely for core functionality of Youtube Subscription(Collection) Manager and to improve the quality and security of our service. Your information isn’t and has never been sold to third parties.
+</p>
+<p>What information is being stored, or accessed?
+Your extension data(such as collection list, image list and extension setting) are transferred and stored securely, solely for your usage within our extension and not shared with any other third parties, except as specified in this policy. We use chrome.storage API for transferred and stored your information.
+</p>
+<p>Data accessible through WebExtensions API
+<p>WebExtension APIs used within Chrome Extensions and Firefox Add-ons have fine-grained permission levels that are enforced by the Web Browser, restricting information that our extension has access to within your Browser. The Youtube Subscription(Collection) Manager extension can only access specific information that you have explicitly granted permission for. We can not and do not track your browsing history.
+</p>
+<p>Additional optional permissions may be requested when you enable specific features. When you enable a feature that requests an optional permission, your Web Browser will make it clear what permission(s) are being requested. The feature will be accessible once you choose to allow the requested permission(s).
+</p>
+<p>Feature usage data
+<p>This extension uses Mixpanel, a web analytics service provided by Mixpanel, Inc. (“Mixpanel”). Mixpanel uses “cookies”, which are text files placed on your computer, to help the website analyze how users use the site.
+</p>
+<p>To improve the content, features and overall experience of the extension, we gather and log data on how our users access and use Youtube Subscription(Collection) Manager. For example, we may log actions like clicking on collection name, open tv mode, change image or set settings.
+</p>
+<p>Some of this usage data is sent to Mixplanel. In these cases, we do not send any identifying information that could be correlated with your account. We also make use of their IP anonymization feature to prevent your IP from being associated with your usage data.
+</p>
+<p>Do we disclose any information to third parties?
+We do not sell, trade, or otherwise transfer to 3rd parties your personally identifiable information. This does not include trusted third parties who assist us in operating our web site, conducting our business, or servicing you, so long as those parties agree to keep this information confidential.
+What do we use your information for?
+Any of the information we collect from you may be used to personalize your experience. Your information helps us to better respond to your individual needs and improve this extension. We continually work to improve our extension offerings based on the information and feedback we receive from you.
+</p>
+<p>If you have any questions about data collection, analysis and use of personal data contact: danabok16@gmail.com
+</p>
